Added a nav header & product grid, & styled elems

--- a/corgi-store/tsconfig.json
+++ b/corgi-store/tsconfig.json
@@ -21,6 +21,6 @@
       "~/*": ["./src/*"]
     }
   },
-  "files": ["./.eslintrc.cjs"],
+  "files": ["./.eslintrc.cjs", "./tailwind.config.js"],
   "include": ["src"]
 }
